--- a/private/goexw/goexw/Views/Search/Index.cshtml
+++ b/private/goexw/goexw/Views/Search/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Goexw.ViewModels.QueryCatalogReportViewModel
 <div class="row">
-    <div class="col-md-3" style="background: lightblue">
+    @*<div class="col-md-3" style="background: lightblue">
         <p>Category tree </p>
         <p>Category tree </p>
         <p>Category tree </p>
         <p>Category tree </p>
         <p>Category tree </p>
         <p>Category tree </p>
-    </div>
-    <div class="col-md-9">
+    </div>*@
+    <div class="col-md-12">
         <div class="row clearfix">
             <div class="col-md-12">
                 <ul class="pager no-margin pull-right">
