--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -82,7 +82,7 @@
                     <input type="number" class="form-control" id="quantity" />
                 </div>
             </div>
-            <button class="btn btn-primary" onclick="simpleCart.add('bid=2', 'name=House1', 'price=9000', 'image=/Resources/images/mp1.jpg', 'quantity=1'); showCartPanel(); return false;">Add to Cart</button>
+            <button class="btn btn-primary" onclick="simpleCart.add('sku=2', 'name=House1', 'price=9000', 'image=/Resources/images/mp1.jpg', 'quantity=1'); showCartPanel(); return false;">Add to Cart</button>
         </form>
 
     </div>
