--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -66,7 +66,7 @@
                 </tr>
                 <tr>
                     <td>Price:</td>
-                    <td>9000</td>
+                    <td>@Model.UnitPrice</td>
                 </tr>
                 <tr>
                     <td>Sku:</td>
