--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -57,12 +57,12 @@
 
     <!-- detail information list -->
     <div class="col-md-4">
-        <h1>Product Name</h1>
+        <h1>@Model.Name</h1>
         <table class="table borderless">
             <tbody>
                 <tr>
                     <td>Name:</td>
-                    <td>I am product No.1</td>
+                    <td>@Model.Name</td>
                 </tr>
                 <tr>
                     <td>Price:</td>
