--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -1,5 +1,15 @@
 ﻿@model Goexw.ViewModels.ProductDetailViewModel
 
+<script type="text/javascript">
+    function addToShoppingCart()
+    {
+        var qtystr = 'quantity=' + $('#quantity').val();
+        simpleCart.add('sku=@Model.Sku', 'name=House1', 'price=@Model.UnitPrice', 'image=/Resources/images/mp1.jpg', qtystr);
+        showCartPanel();
+        return false;
+    }
+</script>
+
 <div class="row">
     <ol class="breadcrumb">
         <li><a href="#">Home</a></li>
@@ -83,10 +93,10 @@
             <div class="form-group">
                 <label for="quantity" class="col-sm-2 control-label">Order:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="quantity" />
+                    <input type="number" class="form-control" id="quantity" value="1"/>
                 </div>
             </div>
-            <button class="btn btn-primary" onclick="simpleCart.add('sku=@Model.Sku', 'name=House1', 'price=@Model.UnitPrice', 'image=/Resources/images/mp1.jpg', 'quantity=1'); showCartPanel(); return false;">Add to Cart</button>
+            <button class="btn btn-primary" onclick="return addToShoppingCart();">Add to Cart</button>
         </form>
 
     </div>
