Modfiy the customer id.

--- a/private/goexw/goexw/Views/Order/Index.cshtml
+++ b/private/goexw/goexw/Views/Order/Index.cshtml
@@ -73,6 +73,7 @@
                             </td>
                         </tr>
                     }
+                    <tr><td><div style="height: 4px;"></div></td></tr>
 
                 }
             }
