--- a/private/goexw/goexw/Views/Cart/View.cshtml
+++ b/private/goexw/goexw/Views/Cart/View.cshtml
@@ -117,6 +117,7 @@
         }
 
         $('#commitOrder').val(JSON.stringify(cartModel));
+        simpleCart.empty();
         $("#postForm").submit();
     }
 </script>
