--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -30,25 +30,21 @@
                 <li data-target="#carousel-product-pictures" data-slide-to="1" class="active"></li>
                 <li data-target="#carousel-product-pictures" data-slide-to="2" class="active"></li>
                 <li data-target="#carousel-product-pictures" data-slide-to="3" class="active"></li>
-                <li data-target="#carousel-product-pictures" data-slide-to="4" class="active"></li>
             </ol>
 
             <!-- wrapper -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="~/Resources/images/mp1.jpg" class="img-responsive" alt="-1" />
+                    <img src="~/Content/mockimgs/circle2.jpg" class="img-responsive" alt="-1" />
                 </div>
                 <div class="item">
-                    <img src="~/Resources/images/mp1.jpg" class="img-responsive" alt="-1" />
+                    <img src="~/Content/mockimgs/circle3.jpg" class="img-responsive" alt="-1" />
                 </div>
                 <div class="item">
-                    <img src="~/Resources/images/mp1.jpg" class="img-responsive" alt="-1" />
+                    <img src="~/Content/mockimgs/circle4.jpg" class="img-responsive" alt="-1" />
                 </div>
                 <div class="item">
-                    <img src="~/Resources/images/mp1.jpg" class="img-responsive" alt="-1" />
-                </div>
-                <div class="item">
-                    <img src="~/Resources/images/mp1.jpg" class="img-responsive" alt="-1" />
+                    <img src="~/Content/mockimgs/circle5.jpg" class="img-responsive" alt="-1" />
                 </div>
             </div>
 
