--- a/private/goexw/goexw/Views/Search/Index.cshtml
+++ b/private/goexw/goexw/Views/Search/Index.cshtml
@@ -57,7 +57,7 @@
 
             <div class="row">
                 <div class="col-md-2">
-                    <img src="~/Resources/images/mp1.jpg" class="img-thumbnail" />
+                    <img src="~/Content/mockimgs/mp1.jpg" class="img-thumbnail" />
                 </div>
 
                 <div class="col-md-3">
