--- a/private/goexw/goexw/Views/Shared/_Layout.cshtml
+++ b/private/goexw/goexw/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <script type="text/javascript">
-        simpleCart.cartHeaders = ['Image', 'Name', 'Price', 'Quantity_input', 'Total'];
+        simpleCart.cartHeaders = ['Image', 'Name', 'Price', 'Quantity_input', 'Total', 'CustomPrice'];
         simpleCart.checkoutTo = "Custom";
     </script>
     <div class="navbar navbar-inverse">
