--- a/private/goexw/goexw/Views/Product/Detail.cshtml
+++ b/private/goexw/goexw/Views/Product/Detail.cshtml
@@ -4,7 +4,8 @@
     function addToShoppingCart()
     {
         var qtystr = 'quantity=' + $('#quantity').val();
-        simpleCart.add('sku=@Model.Sku', 'name=House1', 'price=@Model.UnitPrice', 'image=/Resources/images/mp1.jpg', qtystr);
+        var saleTypeStr = 'saletype=' + $('#saleType').val();
+        simpleCart.add('sku=@Model.Sku', 'name=House1', 'price=@Model.UnitPrice', 'image=/Resources/images/mp1.jpg', qtystr, saleTypeStr);
         showCartPanel();
         return false;
     }
@@ -94,6 +95,15 @@
                 <label for="quantity" class="col-sm-2 control-label">Order:</label>
                 <div class="col-sm-10">
                     <input type="number" class="form-control" id="quantity" value="1"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Purchase Type:</label>
+                <div class="col-sm-10">
+                    <select id="saleType" class="form-control">
+                        <option value="Sample">Sample Sale</option>
+                        <option value="WholeSale">Whole Sale</option>
+                    </select>
                 </div>
             </div>
             <button class="btn btn-primary" onclick="return addToShoppingCart();">Add to Cart</button>
