Fix a bug that the details will throw exception when model is null

--- a/private/goexw/goexw/Views/Order/Details.cshtml
+++ b/private/goexw/goexw/Views/Order/Details.cshtml
@@ -22,6 +22,10 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.OrderId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @if(Model != null)
+    { 
+        @Html.ActionLink("Edit", "Edit", new { id = Model.OrderId }) 
+        
+        @Html.ActionLink("Back to List", "Index")
+    }
 </p>
